Refactor content in value creation articles for clarity and structure
- Enhanced the ethical framework in "4-sustainable-ethical-value-creation" by adding sub-sections and emphasizing the principle of "do no harm."
- Improved the narrative flow and clarity in "5-health-and-clarity-of-mind," introducing metaphors and linking concepts of health and clarity to value creation.
- Added detailed explanations and examples in "6-2-5-common-traps-in-value-creation," highlighting the importance of recognizing unseen truths in success stories.

--- a/pages/writing-opinion/values-creation/0-introduction.html
+++ b/pages/writing-opinion/values-creation/0-introduction.html
@@ -16,9 +16,7 @@
 		</header>
 
 		<section class="content-section">
-			<p>I write these lines not because I believe I have understood life, but because I am acutely aware of this: understanding, if not held in words, gradually fades and may disappear as if it had never existed.</p>
-
-			<p>I am not sure how many people this book will help. For some, it may not be new; for others, it may not be deep enough. But I believe that, at the very least, it will be a guide written with seriousness and heart—something I can leave to my children and grandchildren in the future, as a foundation for them to understand that value does not arise on its own, and that life becomes meaningful when we create value for others.</p>
+			<p>I am not sure how many people this book will help. For some, it may not be new; for others, it may not be deep enough. But I believe that, at the very least, it will be a guide written with seriousness and heart.</p>
 
 			<p>What is presented here is not a formula for success, nor a promise of an easy life. These are foundational principles that I believe can apply to most people—especially those who are struggling, without a frame of reference or clear guidance to define the path they wish to take and the goals they wish to pursue in life.</p>
 
@@ -27,6 +25,10 @@
 			<p>In truth, most of what I write in this book is not entirely new knowledge. Many ideas have been known, discussed, and existed in various forms for a long time. The difference, if there is one, lies in how I systematize and arrange them according to my own experience and perspective—as an effort to build a consistent direction of thought, clear enough that I can act and reflect upon it. I do not aim to create a new doctrine, only to share an approach that might help readers find the path suitable for themselves.</p>
 
 			<p>This book is, at its core, a personal philosophy framework—not intended to replace any doctrine, but simply to reflect how I have learned to see, think, and act in response to the question of value.</p>
+
+			<p style="text-align: right; margin-top: 3em; font-style: italic;">
+				Phù Du
+			</p>
 		</section>
 	</article>
 	<script src="settings.js"></script>
