--- a/pages/writing-opinion/values-creation/4-sustainable-ethical-value-creation.html
+++ b/pages/writing-opinion/values-creation/4-sustainable-ethical-value-creation.html
@@ -14,49 +14,84 @@
 		</header>
 
 		<section class="content-section">
-			<p>To judge whether something we create truly carries value, the first consideration is ethics. Yet ethics is not a fixed standard; it bears the marks of history, is shaped by social context, and shifts over time and across cultures. Here I do not attempt to build a universal ethical yardstick for everyone. Instead, I present a personal viewpoint—a conscious bias—used as a basic measure for assessing value within my own reasoning.</p>
 
-			<p>In thinking about ethics, I am often reminded of converging ideas across traditions: “Do not do to others what you do not want for yourself” (Confucius); Socrates’ view that “What angers us when others do to us, we should not do to them”; and Aristotle’s emphasis that a virtuous person places themselves in others’ position before acting.</p>
-
-			<p>Though expressed in different contexts, these views meet at one point: our actions should not harm others. For me, this is the minimal but necessary ethical principle—a constant anchor to decide whether what we create is genuine value or merely benefit justified by outcomes.</p>
-
-			<p>I will not delve into what happens if others ignore this principle or even choose to harm us. Each person operates from their own moral frame, influenced by experience, circumstances, and beliefs. Not everyone cares whether their actions hurt others. This is a real dilemma and a limit we must accept: we can hardly, if ever, change or control others’ actions.</p>
-
-			<p>What lies within our control is how we choose to act. Rather than trying to adjust the outside world, I focus on inner development—building a consistent rule of action that does not conflict with my conscience even when it is not reciprocated. Ethics, in this sense, is a voluntary boundary we set for ourselves.</p>
-
-			<p>While writing this section, a small coincidence made me pause. On a bookshelf, I came across Kent M. Keith's "The Paradoxical Commandments." The first item reads: "People are illogical, unreasonable, and self-centered. But love them anyway."</p>
-
-			<p>This statement does not deny human irrationality; it acknowledges it as an unavoidable reality. In some ways, this irrationality may stem from fundamental differences between people—in experience, circumstances, fears, or how they see the world. The key lies here: we can barely change others through our wishes or logic alone. The only thing within our control is how we choose to act in the face of that irrationality.</p>
-
-			<p>In that spirit, "love" is not a mandatory ethical demand I set here. I do not claim everyone must love others for their actions to have value. The minimum principle I pursue remains: do no harm. However, if one can go further—if in certain circumstances we are grounded enough to choose love—that would be something precious. Because deep within each person, whether rational or irrational, everyone longs to be understood and loved in some way.</p>
-
-			<p>Seen this way, love is not weakness or surrender to others' irrationality, but an active choice of the inner self. It does not aim to change the world immediately, but helps the actor not lose themselves when facing the limits of human existence that cannot be controlled.</p>
-
-			<p>Seen positively, if more people approach and choose the no-harm principle, benefits reach beyond individuals. A society where people self-limit their actions naturally becomes less conflict-ridden, more trustworthy, and more sustainable. Absolute consensus is unrealistic, but starting with oneself is the most feasible way to make ethics a real foundation for the value we create.</p>
-
-			<p>Harming others’ interests is not only blatant and direct. In daily life, a small act—like burning trash that smokes—can irritate neighbors. Adjusting behavior, reducing impact, or simply asking permission prevents conflict and shows respect. These harms are easy to spot because their effects appear almost immediately.</p>
-
-			<p>Not all harm is so visible. Some actions harm indirectly, quietly, and over time—like deforestation that erodes ecosystems and leaves long-term environmental consequences. Such effects often fall outside our immediate view and are easy to overlook, even without any intent to harm.</p>
-
-			<p>This is where things get more complex. At the moment of acting, we cannot foresee every consequence. A seemingly small action can trigger a chain of effects far larger than we expected—much like the “butterfly effect,” where a tiny movement contributes to big changes elsewhere. The point is not the level of uncertainty itself, but the actor’s attitude toward that possibility.</p>
-
-			<p>Therefore, when creating anything—large or small—careful reflection matters. Ethics here does not demand perfect prediction of outcomes; it asks for an alert mindset: awareness that our actions may extend beyond what we directly see, and thus must be carried out with caution, humility, and readiness to adjust when unintended effects surface.</p>
-
-			<p>I intentionally stop at this simplest level. I do not discuss helping others, broader social responsibility, or obligations to intervene. Even “being responsible” or “helping” is complex and context-dependent, easily leading to unintended consequences. Not all help automatically creates value; uninformed or careless help can cause harm we never anticipated. Those questions are beyond the scope of this section.</p>
-
-			<p>For me, adhering to the no-harm principle is enough to set a solid foundation. When value is created without infringing on others’ interests and without leaving obvious or latent negative effects, that value is more likely to endure and remain sustainable. From this minimal but consistent base, further development—whether personal or broader—can proceed more steadily and meaningfully.</p>
-
+			<!-- 1. Ethics as a basic criterion for evaluating value -->
 			<div class="sub-section">
-				<h3 class="sub-point-1">Summary of Key Points</h3>
-				<ul class="outline-list">
-					<li><strong>Ethics shifts with context:</strong> There is no absolute standard; this essay uses a conscious personal bias as the minimal gauge.</li>
-					<li><strong>Minimum principle:</strong> Do no harm to others—a cross-cultural common ground and the baseline for judging value.</li>
-					<li><strong>Internal control:</strong> We cannot control others’ ethics; what we can control is acting consistently with our own conscience.</li>
-					<li><strong>Layers of harm:</strong> Harm can be direct and obvious or indirect and subtle; both must be recognized.</li>
-					<li><strong>Cautious stance:</strong> Because outcomes are hard to foresee, actions need awareness, humility, and readiness to adjust.</li>
-					<li><strong>Sustainable base:</strong> Following “do no harm” yields value that faces less conflict and endures longer.</li>
-				</ul>
+				<h3 class="sub-point-1">Ethics as a foundational criterion for evaluating value</h3>
+
+				<p>To evaluate whether something created truly carries value, the first consideration is ethics. However, ethics is not a fixed standard. It bears the imprint of history, is shaped by social context, and changes over time and across cultures. Therefore, in this section, I do not attempt to build a universal moral framework for everyone, but present a personal viewpoint—a conscious bias—used as a basic measure to assess value within my own reasoning.</p>
 			</div>
+
+			<!-- 2. Minimum principle: do no harm -->
+			<div class="sub-section">
+				<h3 class="sub-point-1">Minimum principle: do no harm</h3>
+
+				<p>When thinking about ethics, I often recall similar ideas across many philosophical traditions. For instance, Confucius’ saying, “What you do not wish for yourself, do not do to others”; Socrates’ view that “What angers us when others do to us, we should not do to them”; and Aristotle’s point that a virtuous person places themselves in the other’s position before acting.</p>
+
+				<p>Though expressed in different contexts and traditions, these views meet at one common point: human actions should not harm others. For me, that is the minimal yet necessary ethical principle—a consistent anchor for judging whether what we create is genuine value, or merely benefit justified by outcomes.</p>
+			</div>
+
+			<!-- 3. Limits: we cannot control others -->
+			<div class="sub-section">
+				<h3 class="sub-point-1">The limits of life: we cannot control others</h3>
+
+				<p>Here, I do not go deeper into the question of what happens if others do not follow that principle, or even actively choose to harm us. In practice, each person operates with a different moral frame, shaped by their experience, circumstances, and beliefs. Not everyone cares whether their actions harm others. This is a real dilemma, and also a limit we must accept: it is very difficult—if not nearly impossible—to change or control other people’s actions.</p>
+
+				<p>What lies within each person’s capacity is how they choose to act. Rather than directing effort toward adjusting the outside world, I am more concerned with the process of inner development—building a consistent principle of action that, even if not reciprocated, still does not conflict with one’s own conscience. Ethics, in this sense, is not a tool for demanding others behave better, but a voluntary boundary we set for ourselves.</p>
+			</div>
+
+			<!-- 4. An inner anchor: choosing love (not mandatory) -->
+			<div class="sub-section">
+				<h3 class="sub-point-1">A further choice: love as an inner anchor</h3>
+
+				<p>While writing this section, a small coincidence made me pause to think. On a bookshelf, I came across Kent M. Keith’s The Paradoxical Commandments. The first line says: “People are illogical, unreasonable, and self-centered. But love them anyway.”</p>
+
+				<p>This statement does not deny human “irrationality,” but acknowledges it as an unavoidable reality. From one angle, that irrationality may stem from fundamental differences between people—experience, circumstances, fears, or how they see the world. The key point is this: we can hardly change others through our wishes or logic alone. The only thing within our control is how we choose to act in the face of that irrationality.</p>
+
+				<p>In that spirit, “love” is not a mandatory ethical demand I set here. I do not claim that everyone must love others for their actions to have value.<b> The minimum principle I pursue remains: do no harm</b>. However, if one can go further—if in some circumstances we are steady enough to choose love—that is something precious. Because deep within each person, whether rational or irrational, there is a longing to be understood and loved in some way.</p>
+
+				<p>Seen this way, love is not weakness or surrender to others’ irrationality, but an active choice from within. It does not aim to change the world immediately, but helps the person acting not lose themselves while facing the limits of human life that cannot be controlled.</p>
+			</div>
+
+			<!-- 5. Social impact if the principle spreads -->
+			<div class="sub-section">
+				<h3 class="sub-point-1">When the minimum principle spreads</h3>
+
+				<p>From a more positive angle, if more people approach and choose to follow the no-harm principle, the benefits go beyond individuals. A social environment where people know how to self-limit their actions naturally becomes less conflict-ridden, more trustworthy, and more sustainable. Even if absolute consensus is impossible, each person beginning with themselves remains the most feasible way for ethics to exist not only as an idea, but as a real foundation for the value created.</p>
+			</div>
+
+			<!-- 6. Direct and indirect harm -->
+			<div class="sub-section">
+				<h3 class="sub-point-1">Direct harm and indirect harm</h3>
+
+				<p>Harming others’ interests does not occur only in obvious and direct forms. In everyday life, sometimes a small action—such as burning smoke—can cause discomfort to neighbors. In such cases, adjusting behavior, reducing impact, or simply asking permission not only prevents conflict but also shows respect for others. These harms are easy to notice because their effects appear almost immediately.</p>
+
+				<p>However, not all harm is so visible. Some actions cause harm indirectly, quietly, and over time—for instance, deforestation that degrades ecosystems and leaves long-term consequences for the environment. These outcomes often lie beyond direct observation and are therefore easy to overlook, even when the actor has no intention to cause harm.</p>
+			</div>
+
+			<!-- 7. Uncertainty of consequences and the ethical stance -->
+			<div class="sub-section">
+				<h3 class="sub-point-1">Uncertainty of consequences and the stance we need in action</h3>
+
+				<p>Here, the issue becomes more complex. There are impacts that, at the time of action, we cannot fully foresee. A seemingly small action can lead to chains of influence far larger than originally expected—like the “butterfly effect,” where a tiny movement can contribute to large changes far away. The important point is not the degree of uncertainty itself, but the actor’s attitude toward that possibility.</p>
+
+				<p>Therefore, when creating anything—small or large—careful consideration and reflection are always necessary. Ethics, in this case, does not require exact prediction of all consequences, but calls for a clear-minded spirit: awareness that our actions may extend beyond the immediate, and thus must be carried out with caution, humility, and readiness to adjust when unintended impacts appear.</p>
+			</div>
+
+			<!-- 8. Intentionally stopping at the minimum principle -->
+			<div class="sub-section">
+				<h3 class="sub-point-1">Intentionally stopping at the minimum principle</h3>
+
+				<p>Here, I deliberately stop at the simplest level. I do not discuss helping others, nor do I set broader demands such as social responsibility or obligations to intervene in surrounding life. What I care about first is only one minimum principle: do not cause harm. Even the concepts of “being responsible” or “helping” are complex, context-dependent, and can easily lead to unintended consequences. Not all help automatically creates value; in many cases, help without understanding or careful consideration can cause harm that we did not initially foresee. Those questions are beyond what I can fully cover in this section.</p>
+			</div>
+
+			<!-- 9. Conclusion: a foundation for sustainable value -->
+			<div class="sub-section">
+				<h3 class="sub-point-1">A foundation for sustainable value</h3>
+
+				<p>For me, adhering to the no-harm principle is enough to set a solid foundation. When value is created without infringing on others’ interests and without leaving obvious or hidden negative consequences, that value is more likely to endure and remain sustainable. From this minimal but consistent foundation, any further development—whether at the personal level or beyond—can proceed in a more stable and meaningful way.</p>
+			</div>
+
 		</section>
 	</article>
 
