--- a/pages/writing-opinion/values-creation/5-health-and-clarity-of-mind.html
+++ b/pages/writing-opinion/values-creation/5-health-and-clarity-of-mind.html
@@ -14,50 +14,81 @@
 		</header>
 
 		<section class="content-section">
-			<p>A steel bar used continuously without proper tempering or rest quickly loses its durability and deforms. At first it can still bear weight, even loads beyond what was planned. But the more it is pushed past its limits, the clearer the risk of breaking becomes. Not because the steel is low quality, but because it is being used beyond its own load-bearing capacity.</p>
 
-			<p>The blacksmith knows this well. To forge a durable bar, he cares not only about how hard to strike, but also when to heat, when to cool, and when to stop. Strength comes from balancing stress and recovery. A properly tempered bar may not impress at first glance, but it can hold steady loads over a long time.</p>
-
-			<p>People are no different. Health and clarity of mind do not directly create value, but they decide how much strain each person can endure under prolonged pace and pressure. When that foundation weakens, every effort—whether born of goodwill, discipline, or ambition—becomes fragile. Value, in that case, does not fail for lack of good intent, but for lack of the conditions to sustain it.</p>
-
-			<p>This chapter looks at those foundational conditions: health as the body's load-bearing capacity, and clarity of mind as the ability to keep action from veering off course. Before talking about doing better, faster, or more, we need to know whether we have enough strength and alertness to keep acting rightly for a long enough stretch.</p>
-
-			<p>We can also look back at the discussion in Creating Value Through Actions. When I used the image of having to "run" every morning—whether you are a lion or a gazelle—the focus was not on speed or competition but on the continuity of action. To keep "running" day after day, the prerequisite is a body strong enough to bear that rhythm. Without a minimal physical foundation, any call for discipline or persistence is fragile.</p>
-
-			<p>Even on a spiritual path, health is indispensable. In Buddhism, the story of six years of ascetic practice by Prince Siddhartha Gautama illustrates this sharply. After years of self-denial in search of enlightenment, his body became emaciated and nearly devoid of life force. In that state, not only was his body damaged, his mental clarity also eroded.</p>
-
-			<p>The moment Sujata offered a bowl of milk porridge—a nourishing food that helped him regain some strength—marked an important turning point. As his body was fed again, his mind gradually cleared. In that clarity he saw that extreme asceticism did not lead to liberation but was just another distortion. From this restored lucidity the Middle Way—avoiding both indulgence and self-mortification—took shape.</p>
-
-			<p>This story suggests something worth pondering: even the pursuit of ultimate truth cannot be separated from basic bodily conditions. When the body is pushed to its limits, the mind struggles to stay clear enough to recognize the right path. In that sense, health does not oppose spiritual life; it is the quiet foundation that allows awakening to happen.</p>
-
-			<p>Placed in the context of creating value, the lesson is even clearer. No one can sustain right action over the long term—whether in labor, creativity, or practice—if their body cannot support it. Health is not indulgence; it is the necessary condition to avoid extremes that exhaust both body and mind.</p>
-
-			<p>If health is the physical base that keeps us moving, intellect—the clarity of mind—is the cognitive base that keeps those movements on course. A sound body lets us stand up to the pace of life, but only a clear mind helps us know where we are going and why we chose that path.</p>
-
-			<p>In distinguishing right from wrong, ethical from unethical, or value from non-value, intellect is crucial. When perception is clouded, people drift—not out of ill will, but because they can no longer see the consequences of what they are doing. In that state, what we create can become meaningless or even harmful to ourselves and to those around us.</p>
-
-			<p>Conversely, when the mind is clear, a person can decide for themselves without being swept away by pressure, emotion, or others' expectations. That clarity allows action with fuller awareness of consequences, and thus a readiness to own the results—for better or worse. In this sense, intellect is not only the ability to think clearly; it is the condition that lets us truly own our lives and the value we create.</p>
-
-			<p>In Dale Carnegie's How to Win Friends and Influence People, the first chapter recounts a story about Abraham Lincoln during the American Civil War. When General Meade missed the chance to destroy the opposing army and let them withdraw safely, Lincoln was deeply disappointed and intended to write a scathing letter. In the end, he never sent it. Carnegie uses this to illustrate a familiar principle: "If you want to gather honey, don't kick over the beehive."</p>
-
-			<p>Seen through the lens of intellect and value creation, Lincoln's choice shows sober calculation. Sending the letter might have vented his immediate anger but would create no lasting value. It risked damaging the relationship, undermining cooperation, and demotivating a key partner. By holding back his emotional reaction, Lincoln preserved an important resource—a general who continued serving the country at a critical time.</p>
-
-			<p>This story shows that intellect is not only about acting correctly but also about refraining when an action adds no value. In many cases, stopping, exercising restraint, and choosing not to act—though fully capable—is the wise decision that protects value over the long term.</p>
-
-			<p>The section on intellect will be explored in more depth in the next chapter, "Common Traps in Value Creation." There I will focus on common cognitive and reasoning pitfalls—blind spots that make people think they are creating value while actually veering off course. The aim of examining these traps is not perfect correctness but learning to think more clearly and cautiously before acting.</p>
-
-			<p>I do not emphasize intelligence as an innate trait, because that is not something anyone can simply choose. I care more about how people can gradually improve their thinking—a capacity that can be trained, accumulated, and carried for life. In the journey of creating value, the ability to think clearly and soundly is the most durable piece of gear we have.</p>
-
-			<p>In the end, the issue is not that people lack value or good intentions, but that they often overestimate their intent and underestimate the conditions required to live it out. When the body is not strong enough and the mind not clear enough, value—even when rightly chosen—can be distorted in the very process of being created.</p>
-
+			<!-- 1. Steel bar metaphor: balance between pressure and recovery -->
 			<div class="sub-section">
-				<h3 class="sub-point-1">Summary of Key Points</h3>
-				<ul class="outline-list">
-					<li><strong>Health as a base condition:</strong> Weakness drains time, energy, and effectiveness; a healthy body enables continuous action.</li>
-					<li><strong>Action needs a physical foundation:</strong> Discipline and endurance are fragile without minimal physical capacity.</li>
-					<li><strong>Intellect guides direction:</strong> A clear mind distinguishes right from wrong and owns the consequences of action.</li>
-					<li><strong>Clarity can be trained:</strong> Thinking can be improved; clear reasoning is the most durable asset for creating value.</li>
-				</ul>
+				<h3 class="sub-point-1">Endurance comes from balancing pressure and recovery</h3>
+
+				<p>A steel bar, if used continuously without proper tempering or rest, will quickly lose its durability and deform. At first, it can still bear weight, even loads beyond what was planned. But the more it is pushed past its limits, the clearer the risk of breaking becomes. Not because the steel is low quality, but because it is used beyond its own load-bearing capacity.</p>
+
+				<p>The blacksmith understands this well. To forge a durable bar, he cares not only about how hard to strike, but also when to heat, when to cool, and when to stop. Endurance does not come from unceasing pressure, but from a balance between stress and recovery. A properly tempered bar may not impress at first glance, but it can bear steady loads for a long time.</p>
+			</div>
+
+			<!-- 2. Why health and clarity are foundational conditions -->
+			<div class="sub-section">
+				<h3 class="sub-point-1">Health and clarity are the conditions that allow intention to be sustained</h3>
+
+				<p>People are no different. Health and clarity of mind do not directly create value, but they determine how much strain a person can endure under prolonged pace and pressure. When that foundation weakens, every effort—whether born of goodwill, discipline, or aspiration—becomes fragile. Value, in that case, does not collapse for lack of good intent, but for lack of the conditions that allow that intent to be sustained.</p>
+
+				<p>This chapter addresses those foundational conditions: health as the body’s load-bearing capacity, and clarity of mind as the ability to keep action from veering off course. Before talking about doing better, faster, or more, we need to know whether we have enough strength and alertness to keep acting rightly over a long enough stretch of time.</p>
+			</div>
+
+			<!-- 3. Link to previous chapter: “must run” needs physical base -->
+			<div class="sub-section">
+				<h3 class="sub-point-1">Continuity of action requires a minimal physical base</h3>
+
+				<p>We can also look back at Creating Value Through Actions. When I used the image of having to “run” every morning—whether lion or gazelle—the focus was not on speed or competition, but on continuity of action. But to “run” day after day, the prerequisite is a body strong enough to bear that rhythm. Without a minimal physical foundation, any call for discipline or persistence becomes fragile.</p>
+			</div>
+
+			<!-- 4. Middle Way lesson: health as the base of clarity -->
+			<div class="sub-section">
+				<h3 class="sub-point-1">Health as the quiet foundation of clarity</h3>
+
+				<p>Even on a spiritual path, health remains indispensable. In Buddhism, the story of Prince Siddhartha Gautama’s six years of ascetic practice is a clear illustration. After years of self-mortification in pursuit of enlightenment, his body became weakened, nearly depleted of life force. In that state, not only was the body damaged, but the mind’s clarity also diminished.</p>
+
+				<p>The moment Sujata offered a bowl of milk porridge—a nourishing meal sufficient to restore some strength—marked an important turning point. As the body was nourished again, the mind gradually became clearer. In that restored clarity, he realized that extreme asceticism did not lead to liberation, but was another form of deviation. From that regained lucidity, the idea of the Middle Way—avoiding both indulgence and self-mortification—truly took shape.</p>
+
+				<p>This story suggests something worth considering: even the pursuit of ultimate truth cannot be separated from basic bodily conditions. When the body is pushed to its limits, the mind struggles to maintain the clarity needed to recognize the right path. In this sense, health does not oppose spiritual life; it is the quiet foundation that allows awakening to occur.</p>
+
+				<p>Placed in the context of creating value, the lesson becomes clearer. A person cannot sustain right action over the long term—whether in labor, creativity, or practice—if their body lacks the strength to support those efforts. Health, therefore, is not indulgence or self-pampering, but a necessary condition to avoid extremes that exhaust both body and mind.</p>
+			</div>
+
+			<!-- 5. Intellect: cognitive base keeping action on track -->
+			<div class="sub-section">
+				<h3 class="sub-point-1">Intellect keeps action from veering off course</h3>
+
+				<p>If health is the physical base that allows people to keep acting, then intellect—the clarity of mind—is the cognitive base that keeps those actions on track. A sound body lets us stand up to the rhythm of life, but only a clear mind helps us understand where we are going and why we chose that path.</p>
+
+				<p>In distinguishing right from wrong, ethical from unethical, or value from non-value, intellect plays a pivotal role. When perception is clouded, people easily drift—not necessarily from ill will, but because they can no longer see the consequences of their actions. In such a state, what we create can become meaningless or even harmful to ourselves and those around us.</p>
+
+				<p>Conversely, when the mind is clear, a person can make decisions for themselves without being swept away by pressure, emotion, or external expectations. That clarity allows action with fuller awareness of consequences, and therefore a readiness to accept the results—or the responsibility—for what one creates. In this sense, intellect is not merely the ability to think clearly, but the condition that enables a person to truly own their life and the value they create.</p>
+			</div>
+
+			<!-- 6. Lincoln example: intellect includes “not acting” -->
+			<div class="sub-section">
+				<h3 class="sub-point-1">Intellect also means not acting when no value is created</h3>
+
+				<p>In Dale Carnegie’s How to Win Friends and Influence People, the opening chapter recounts a story about Abraham Lincoln during the American Civil War. When General Meade missed the chance to destroy the opposing army and allowed them to withdraw safely, Lincoln was deeply disappointed and intended to write a harsh letter of criticism. In the end, he did not send it. Carnegie uses this story to illustrate a familiar principle: “If you want to gather honey, don’t kick over the beehive.”</p>
+
+				<p>Seen through the lens of intellect and value creation, Lincoln’s decision shows sober consideration. Criticism might have helped him release immediate emotion, but it would not create any lasting value. It risked damaging the relationship, undermining cooperation, and reducing a key partner’s motivation. By restraining his emotional reaction and choosing not to act in anger, Lincoln preserved an important resource—a general who continued to serve the country in a critical period.</p>
+
+				<p>This story shows that intellect is not only the ability to act correctly, but also the ability not to act when that action creates no value. In many cases, pausing, restraining oneself, and choosing not to do something—though fully possible—can be the wisest decision, allowing value to be preserved and continue to grow over time.</p>
+			</div>
+
+			<!-- 7. Toward the chapter on cognitive traps -->
+			<div class="sub-section">
+				<h3 class="sub-point-1">From intellect to recognizing cognitive traps</h3>
+
+				<p>I will explore the topic of intellect more deeply in the next chapter, “Common Traps in Value Creation.” There, I will focus on frequent distortions in perception and reasoning—blind spots that make people think they are creating value while actually veering off course. By recognizing these cognitive traps, the goal is not absolute correctness, but learning to think more clearly and cautiously before acting.</p>
+
+				<p>I do not emphasize intelligence as an inborn ability, because that is not something one can choose or decide. What I care more about is how people can gradually improve their own thinking—a capacity that can be trained, accumulated, and carried throughout life. In the journey of creating value, the ability to think clearly and correctly is the most durable companion, lasting longer than any other skill or tool.</p>
+			</div>
+
+			<!-- 8. Chapter conclusion -->
+			<div class="sub-section">
+				<h3 class="sub-point-1">When foundational conditions are insufficient, value is easily distorted</h3>
+
+				<p>In the end, the problem is not that people lack value or goodwill, but that they often overestimate their intent and underestimate the conditions needed to live fully with that intent. When the body is not strong enough and the mind not clear enough, value—even when rightly chosen—can be distorted in the very process of being created.</p>
 			</div>
 		</section>
 	</article>
