--- a/pages/writing-opinion/values-creation/6-2-5-common-traps-in-value-creation-common-traps-5-vn.html
+++ b/pages/writing-opinion/values-creation/6-2-5-common-traps-in-value-creation-common-traps-5-vn.html
@@ -21,6 +21,7 @@
 			<h3 class="sub-point-1">Khi những gì ta nhìn thấy không phải là toàn bộ sự thật</h3>
 			<p>Trong rất nhiều câu chuyện thành công, ta thường nghe kể về những người đã làm được, những con đường đã dẫn tới kết quả tốt, và những lựa chọn được xem là đúng đắn. Ít khi ta được nghe về những người đã thử làm điều tương tự nhưng không đi đến đâu, hoặc những con đường đã kết thúc trong im lặng. Không phải vì những câu chuyện ấy không tồn tại, mà vì chúng không còn được nhìn thấy.</p>
 			<p>Khi chỉ quan sát những gì còn sót lại sau quá trình sàng lọc tự nhiên của thất bại và đào thải, ta dễ tin rằng những đặc điểm của kẻ sống sót chính là nguyên nhân tạo ra thành công. Và từ đó, một cạm bẫy mới hình thành: ta học từ những gì còn lại, mà quên mất những gì đã mất đi.</p>
+			<p>Khi nhìn lại các cuộc chiến tranh, ta thường ca ngợi những người còn sống như những người làm nên chiến công. Nhưng liệu lịch sử được tạo dựng bởi những người sống sót, hay bởi cả những con người đã vĩnh viễn nằm xuống và không còn cơ hội được kể tên?</p>
 		</div>
 
 		<!-- 2. Cơ chế: dữ liệu bị lệch ngay từ đầu -->
