--- a/pages/writing-opinion/values-creation/1-understanding-the-nature-of-value.html
+++ b/pages/writing-opinion/values-creation/1-understanding-the-nature-of-value.html
@@ -14,42 +14,69 @@
         </header>
 
         <section class="content-section">
-            <p>We often speak a great deal about "value." We are advised to live meaningfully, create value, and pursue the right values. In work, people measure value by performance; in society, by contribution; in personal life, by meaning. But what is notable is this: although the word "value" appears everywhere, we rarely pause to ask seriously what value truly is, and why something is considered valuable in one context yet becomes meaningless—or even harmful—in another.</p>
-            <p>An action may be praised today and condemned tomorrow. A tool may save lives in one person's hands but cause harm in another's. A belief once viewed as progressive may become an obstacle when the context changes. If value were something immutable and self-evident, these paradoxes would not exist. Reality shows that value is not as simple as we often speak of it.</p>
-            <p>Value, in the context discussed here, is an abstract concept—but not a vague one. Something only becomes value when it creates real benefit or meaning for a particular subject, in a particular context, and through consequences that can be felt or observed. Value, therefore, does not exist as a statement or intention, but is established by the impact it leaves in real life.</p>
-            <p>We can speak of value in two broad forms: <strong>tangible</strong> and <strong>intangible</strong>. Tangible value refers to material or physical benefits—food, water, shelter, tools, and other objects that support life and function. For example, water enables the existence of living organisms. On the other hand, intangible value lies in ideas, thoughts, philosophies, and understanding. Philosophy itself may not feed the body, but it nourishes the mind and expands human understanding.</p>
-            <p>Nearly every entity has its own inherent value. At the most basic level, from an ecological perspective, there is the value of existence. A living creature, simply by being born, already contributes to the continuity of life. The instinct to survive and reproduce can be viewed as the first expression of that value—to the larger ecosystem, or at least to the preservation of its species.</p>
-            <p>When we create something—an object, an idea, an action—we also create value. Creation is inherently tied to contribution. A new thought may inspire others; a small action may benefit a community; a created object may serve a practical need. In this sense, value arises whenever what we produce carries meaning or usefulness for someone or something else.</p>
-            <p>However, value is rarely absolute. An entity may be beneficial in one context while harmful in another. A tool that helps one person may endanger another. A belief that supports a community today may become outdated—or even destructive—in another era. This ambiguity makes it difficult to evaluate whether something truly has value.</p>
-            <p>How many things do we still call valuable, simply because we have never placed them in a different context to reconsider?</p>
-            <p>This question does not aim to negate existing values, but to remind us that our perception of value is often deeply influenced by our own familiar circumstances. When the context changes, what was once taken for granted may also need to be reconsidered.</p>
-            <p>The contradictions of value do not only exist in abstract theories; they are very evident in the most familiar tools and ideas of modern life. The Internet is a prime example. For adults, it is an unprecedented space for learning, connection, and expanding knowledge throughout history. But for children, that same tool can become a source of danger if lacking guidance and supervision. The value of the Internet, therefore, does not lie in itself, but in how people place it in their lives—who uses it, under what conditions, and with what level of control.</p>
-            <p>What is notable here is not that the Internet is more special than other tools, but that it clearly exposes a universal law: the value of an entity does not exist independently, but is formed in the relationship between people, context, and the consequences of its use. When those conditions change, the assessment of value must also change accordingly.</p>
-            <p>This law continues to repeat in many other tools that humans create. Antibiotics were once regarded as one of humanity's life-saving inventions, helping people defeat many diseases that once caused mass deaths. However, when misused or used incorrectly, they create antibiotic-resistant bacteria, threatening modern medicine. What was once salvation can become a danger, not because its nature has changed, but because the context and method of use have changed.</p>
-            <p>Even tools closely associated with ethics and security, such as guns, are not outside this logic. In some circumstances, guns are seen as a means of self-defense; in other circumstances, they become instruments of violence and deprivation of life. Judging whether guns are "good" or "bad" cannot be separated from the social environment, laws, and consciousness of the people who possess them.</p>
-            <p>Similarly, the notion that children are the property of their parents was once the foundation of many traditional societies. In certain historical contexts, it contributed to maintaining family and social order. However, under the light of modern awareness of human rights—especially children's rights—this notion is increasingly questioned and reconsidered. The value of an idea, therefore, does not only lie in its original intention, but in the consequences it creates when maintained over time.</p>
-            <p>To understand this complexity clearly, we can apply a simple principle: <strong>if an entity creates more benefit than harm in a given context, we consider it valuable</strong>. But even this requires careful evaluation. Benefit and harm are shaped by historical conditions, specific environments, cultural perspectives, and the needs or perceptions of those who experience them. This principle is not intended to establish an absolute standard, but only serves as a provisional tool for deliberation in specific situations.</p>
-            <p>Therefore, value cannot be evaluated separately from the conditions of its formation. The same action, the same tool, or the same idea can bring benefit in one circumstance but cause harm in another. Labeling something as "valuable" or "not valuable" only has meaning when we place it in the right relationship between intention, action, and the consequences it creates.</p>
-            <p>From this understanding, the core question of creating value is no longer "how much have I done?", but "what has what I done created, for whom, and under what conditions?" Value does not lie in whether we act much or little, but in how clearly we understand how we are placing that action in the world. The following chapters will continue to delve deeper from this foundation, not to seek general formulas, but to explore how people can recognize and create value more consciously and responsibly in their own lives.</p>
 
+            <!-- 1. Why “value” is not self-evident -->
             <div class="sub-section">
-                <h3 class="sub-point-1">Summary of Key Points</h3>
-                <ul class="outline-list">
-                    <li><strong>Definition of Value:</strong> Value is anything that brings benefit, meaning, or significance to a particular subject</li>
-                    <li><strong>Two Forms of Value:</strong>
-                        <ul>
-                            <li><em>Tangible:</em> Material benefits (food, water, tools)</li>
-                            <li><em>Intangible:</em> Ideas, philosophies, understanding</li>
-                        </ul>
-                    </li>
-                    <li><strong>Inherent Value:</strong> From an ecological perspective, every entity has the value of existence, contributing to the larger ecosystem or at least to the preservation of its species</li>
-                    <li><strong>Value Through Creation:</strong> When we create something, we create value for others</li>
-                    <li><strong>Relativity of Value:</strong> Something may be beneficial in one context but harmful in another</li>
-                    <li><strong>Principle of Evaluation:</strong> If an entity creates more benefit than harm in a specific context, we consider it valuable. This is a provisional tool for deliberation in specific situations, not an absolute standard</li>
-                    <li><strong>Value and Relationships:</strong> Value does not exist independently but manifests through relationships between creator, receiver, context, and consequence</li>
-                    <li><strong>Distinguishing Value from Output:</strong> Output is what you produce, while value lies in the results and impact created</li>
-                </ul>
+                <h3 class="sub-point-1">Why “value” is not a self-evident concept</h3>
+
+                <p>We often speak a great deal about “value.” We are advised to live a valuable life, create value, and pursue the right values. In work, value is measured by performance; in society, by contribution; in personal life, by meaning. But what is notable is this: although the word “value” appears everywhere, we rarely stop to ask seriously what value truly is, and why something is seen as valuable in one context yet becomes meaningless—or even harmful—in another.</p>
+
+                <p>An action may be praised today and condemned tomorrow. A tool may save lives in one person’s hands but cause harm in another’s. A belief once regarded as progressive may become a barrier when the context changes. If value were immutable and self-evident, such paradoxes would not exist.</p>
             </div>
+
+            <!-- 2. Defining value in context -->
+            <div class="sub-section">
+                <h3 class="sub-point-1">What value means in a real context</h3>
+
+                <p>Value, in the context discussed here, is an abstract concept—but not a vague one. Something only becomes value when it creates real benefit or meaning for a particular subject, in a particular context, through consequences that can be felt or observed.</p>
+
+                <p>Value, therefore, does not exist as a statement or intention, but is established by the impact it leaves in real life.</p>
+            </div>
+
+            <!-- 3. Forms and origins of value -->
+            <div class="sub-section">
+                <h3 class="sub-point-1">Forms and origins of value</h3>
+
+                <p>We can speak of value in two broad forms: <strong>tangible</strong> and <strong>intangible</strong>. Tangible value refers to material or physical benefits—food, water, shelter, tools, and other objects that support life and function. Intangible value, on the other hand, lies in ideas, thoughts, philosophies, and understanding.</p>
+
+                <p>Nearly every entity has its own inherent value. At the most basic level, from an ecological perspective, there is the value of existence. A living creature, simply by being born, already contributes to the continuity of life.</p>
+
+                <p>When we create something—an object, an idea, an action—we also create value. Value arises whenever what we produce carries meaning or usefulness for someone or something else.</p>
+            </div>
+
+            <!-- 4. Context dependence of value -->
+            <div class="sub-section">
+                <h3 class="sub-point-1">Value and its dependence on context</h3>
+
+                <p>However, value is rarely absolute. An entity may be beneficial in one context while harmful in another. A tool that helps one person may endanger another.</p>
+
+                <p>How many things do we still call valuable, simply because we have never placed them in a different context to reconsider?</p>
+
+                <p>This question is not meant to deny existing values, but to remind us that the way we perceive value is often deeply influenced by our own familiar circumstances.</p>
+            </div>
+
+            <!-- 5. Examples of value shifting with context -->
+            <div class="sub-section">
+                <h3 class="sub-point-1">Typical examples of value changing with context</h3>
+
+                <p>The Internet is a typical example. For adults, it is an unprecedented space for learning, connection, and expanding knowledge. But for children, that same tool can become a source of danger if lacking guidance and supervision.</p>
+
+                <p>Antibiotics were once regarded as one of humanity’s life-saving inventions. However, when abused or used incorrectly, they create antibiotic-resistant bacteria, threatening modern medicine.</p>
+
+                <p>Similarly, guns can be seen as a means of self-defense in some circumstances, but become instruments of violence in others. The notion that children are the property of their parents also shows how the value of an idea can change as awareness and social context change.</p>
+            </div>
+
+            <!-- 6. A practical principle for evaluating value -->
+            <div class="sub-section">
+                <h3 class="sub-point-1">A practical principle for evaluating value</h3>
+
+                <p>To understand this complexity, we can apply a simple principle: <strong>if an entity creates more benefit than harm in a given context, we consider it valuable</strong>.</p>
+
+                <p>This principle is not intended to establish an absolute standard, but only serves as a provisional tool for consideration in specific situations.</p>
+
+                <p>From this understanding, the core question of creating value is no longer “how much have I done?”, but “what has what I done created, for whom, and under what conditions?” The following chapters will continue to delve deeper from this foundation.</p>
+            </div>
+
         </section>
     </article>
 
