--- a/pages/writing-opinion/values-creation/3-creating-value-through-actions.html
+++ b/pages/writing-opinion/values-creation/3-creating-value-through-actions.html
@@ -14,42 +14,71 @@
 		</header>
 
 		<section class="content-section">
-			<p>This is an image I was given in childhood, passed down by elders and teachers. When I speak about value, I often borrow a familiar example from everyday life: ants and bees diligently carrying food and building their nests. These tiny creatures, through repeated and seemingly simple actions, create structures that are vast and durable over time.</p>
-			<p>If we look at Earth as a gigantic ant nest or beehive, we humans are not so different—each person is a small life contributing to a system larger than themselves. From this perspective, not everyone needs to do something grand. It is enough to “bring food home” each day—in other words, to create a small but genuine value for our own “nest”.</p>
-			<p>With this approach, I set aside—for now—factors like knowledge, social organization, or complex division of labor. I also temporarily bracket differences in circumstances, abilities, or living conditions. When a frame includes too many variables, it becomes unwieldy and obscures the core point. What I want to emphasize here is a minimal capacity most ordinary people share: the ability to create a small, regular, and truthful value through action.</p>
-			<p>At that level, creating value is not complicated. It is as simple as bringing a little food home to our “nest” each day. From these small, repeated actions, larger value is formed—not by leaps, but by quiet accumulation over time.</p>
-			<p>I recall a simple yet evocative story about a bricklayer. As he quietly places one brick upon the foundation, a passerby asks, “What are you doing?” Without looking up, he replies, “I’m building a castle.”</p>
-			<p>What matters is not the brick in his hand, but how he sees his work. To an outsider, he is performing a repetitive, heavy, monotonous task. But to him, each brick is part of a larger structure—a meaning beyond the immediate action. That outlook turns everyday labor into a process of creating value.</p>
-			<p>This story shows that value is not determined only by the scale of an action, but by the meaning a person attaches to it. Two people can do the same work, in the same circumstances, yet create entirely different lived experiences. One is merely “laying bricks”; the other is “building a castle.” The difference lies not in force, but in awareness of what one is creating.</p>
-			<p>When people understand what they are building—large or small—their action no longer consumes time meaninglessly; it becomes part of a directed life. In such cases, value does not wait until the castle is complete; it begins with how the worker looks at the very first brick in his hand.</p>
-			<p>An African proverb conveys a similar spirit, one I first encountered in The World Is Flat.</p>
-			<p><i>“Every morning in Africa, a gazelle wakes up. It knows it must run faster than the fastest lion or it will be killed. Every morning in Africa, a lion wakes up. It knows it must run faster than the slowest gazelle or it will starve. It doesn’t matter whether you are a lion or a gazelle—when the sun comes up, you’d better be running.”</i></p>
-			<p>The point worth pondering here is not who runs faster, but a simpler truth: there is no position that allows one to stand still. Whether predator or prey, strong or weak, every living being must act when a new day begins. In this context, “running” is not competition; it is the condition of continued existence.</p>
-			<p>Viewed through the lens of value, this proverb reminds us: regardless of who we are, what role we occupy, or how many advantages we possess, sustaining life—and further, sustaining a meaningful life—requires disciplined, repeated action. Not running once, but running every morning. Not frantic bursts, but steady consistency.</p>
-			<p>What we have already created—abilities, knowledge, relationships, achievements—does not maintain itself. Without continued action, these fade, much like a being that stops running on the savannah. In this sense, “death” is not necessarily biological; it is the loss of the capacity to keep generating value.</p>
-			<p>These stories do not encourage endless rivalry; they point to a more foundational principle: value is formed and maintained through concrete action, repeated with discipline over time. When the sun rises, what matters is not that we outrun someone else, but that we are sufficiently alert and intentional to step into life through our own actions.</p>
-			<p>Human life is often more complex than it appears. Not everything we believe to be value truly is. As noted in Understanding the Nature of Value, evaluating value must be placed within a concrete context. Going one step further, that requires an additional layer: wisdom.</p>
-			<p>Action, by itself, is not enough to guarantee value. Only when guided by clear and sober wisdom can action create value in the proper sense. People sometimes produce things with good intentions, yet harm others or leave negative consequences for the future. Some values exist only for a moment, while others endure, transcending time.</p>
-			<p>Wisdom differentiates between short-lived and lasting values. It helps us look beyond the immediate, weigh long-term effects, and choose more fitting ways to act. If we seek to create value responsibly and deeply, we must not only act, but also continually strengthen our knowledge and our capacity for thought.</p>
-			<p>Human history shows that when action is guided by wisdom, even small things can open great turning points. A falling apple became the starting point for Isaac Newton’s discovery of universal gravitation—not because the apple was special, but because the observer was ready to think beyond the event itself.</p>
-			<p>On a larger scale, the ability to combine wisdom with organization allows humans to create value that outlives a single lifetime. The Egyptian pyramids are one such example. They reflect systemic thinking, engineering, and organization that let an ancient society mobilize resources for decades to build structures that have lasted for thousands of years. Though born in a historical context very different from modern norms, the pyramids show that when wisdom is applied consistently and over the long term, it can generate value that endures through time.</p>
-			<p>Similarly, the Panama Canal was not the product of a spontaneous act, but of decades of accumulated knowledge, organization, and long-horizon decision making. The project did more than shorten sea routes; it changed how the world conducts global trade—a reminder that when action is illuminated by wisdom, the value created can extend far beyond the initial goal.</p>
-			<p>Yet here a question must be asked: do all products of human intellect automatically bring value? Hydropower dams, for instance, supply energy, drive economic development, and improve many communities’ lives. But they can also transform ecosystems, displace residents, and leave long-term impacts on the natural environment.</p>
-			<p>These examples show that wisdom, though necessary, is not sufficient to guarantee value. Wisdom must be joined with contextual judgment, long-horizon thinking, and responsibility for what extends beyond immediate benefit. Through that discernment, value is defined—not only by what we create, but by how we choose to create it and accept the consequences that follow.</p>
-			<p>Creating value does not begin with noble intentions, nor is it guaranteed by passing inspiration. Value appears when we enter life through concrete action, repeated long enough and steadily enough. But action, if not illuminated by wisdom, can produce results contrary to our hopes.</p>
-			<p>Therefore, action is a necessary beginning—but never the end. Sustainable value is formed when action is tied to understanding, to seeing beyond immediate effects, and to bearing responsibility for what we produce. Only in that union does action truly become a path by which we build value and set our lives on a meaningful trajectory.</p>
 
+			<!-- 1. Value from small, steady actions -->
 			<div class="sub-section">
-				<h3 class="sub-point-1">Summary of Key Points</h3>
-				<ul class="outline-list">
-					<li><strong>Small, steady actions grow large value:</strong> Value accrues quietly over time; giant leaps aren’t required</li>
-					<li><strong>Not grand—just genuinely contributive:</strong> Each person can add a small, truthful value daily to their “nest”</li>
-					<li><strong>Perception gives action its meaning:</strong> “Laying bricks” vs “building a castle” reflects how we see and imbue work with meaning</li>
-					<li><strong>Action is a condition of existence:</strong> Discipline and consistency matter more than momentary hustle</li>
-					<li><strong>Value requires context to judge:</strong> Good intentions don’t ensure real value; assess concrete impacts</li>
-					<li><strong>Wisdom guides action:</strong> Distinguish short-lived vs durable value; weigh long-term effects and responsibility</li>
-					<li><strong>Sustainable value = Action + Understanding + Responsibility:</strong> Act continuously, look ahead, and own the impacts you create</li>
-				</ul>
+				<h3 class="sub-point-1">Value is created through small, steady actions</h3>
+
+				<p>When speaking about value, I often borrow a familiar example from everyday life: the image of ants and bees diligently carrying food and building their nests. This is an image I was given in childhood through stories from elders and teachers. Those tiny creatures, through repeated and seemingly simple actions, can create nests that are vast and durable over time.</p>
+				<p>If we look at the Earth as a gigantic ant nest or beehive, then we humans are not so different—each person is a small being contributing to a structure larger than themselves. From this view, not everyone needs to do something grand. It is enough each day to “carry food”—in other words, to create a small but genuine value—and that already contributes to the whole.</p>
+				<p>With this approach, I temporarily set aside factors like knowledge, social organization, or complex division of labor. I also deliberately bracket differences in circumstances, abilities, or living conditions. When a frame contains too many variables, it becomes unwieldy and obscures the core point. What I want to emphasize here is the minimal capacity that most ordinary people have: the ability to create a small, steady, and truthful value through action.</p>
+				<p>At that level, creating value is not complicated. It is as simple as bringing a little food back to the “nest” each day. From those small, repeated actions, larger value gradually forms—not by leaps, but by quiet accumulation over time.</p>
+			</div>
+
+			<!-- 2. Meaning attached to action -->
+			<div class="sub-section">
+				<h3 class="sub-point-1">Meaning lies in how we see our own actions</h3>
+
+				<p>I remember a simple yet evocative story about a bricklayer. As he quietly lays each brick on the foundation, a passerby asks, “What are you doing?” The bricklayer does not look up and replies, “I’m building a castle.”</p>
+				<p>What matters is not the brick in his hand, but the way he views his work. To an outsider, he is just performing a repetitive, heavy, monotonous task. But to him, each brick is part of a larger structure—meaning beyond the immediate action. That view turns everyday labor into a process of creating value.</p>
+				<p>This story shows that value is not decided only by the scale of an action, but by the meaning we attach to it. Two people can do the same work, in the same circumstances, yet create completely different lived experiences. One is merely “laying bricks,” the other is “building a castle.” The difference is not in strength, but in awareness of what one is creating.</p>
+				<p>When people understand what they are contributing to—large or small—their action no longer consumes time meaninglessly, but becomes part of a directed life. Value, in this case, does not wait until the castle is complete; it begins with how the worker sees the very first brick in his hand.</p>
+			</div>
+
+			<!-- 3. Action discipline as a condition for existence -->
+			<div class="sub-section">
+				<h3 class="sub-point-1">Discipline in action as a condition for continued existence</h3>
+
+				<p>An African proverb carries a similar spirit, one I once read in The World Is Flat.</p>
+				<p><i>“Every morning in Africa, a gazelle wakes up. It knows it must run faster than the fastest lion, or it will be killed. Every morning in Africa, a lion wakes up. It knows it must run faster than the slowest gazelle, or it will starve. Whether you are a lion or a gazelle, when the sun rises, you had better be running.”</i></p>
+				<p>The point worth pondering here is not who runs faster, but a simpler truth: there is no position that allows one to stand still. Predator or prey, strong or weak—each being must act when a new day begins. “Running,” in this context, is not competition; it is the condition for continued existence.</p>
+				<p>Viewed through the lens of value, the proverb reminds us that, regardless of who we are, what role we occupy, or how many advantages we possess, sustaining life—and further, sustaining the meaning of life—requires disciplined, repeated action. Not running once, but running every morning. Not with frantic urgency, but with steady persistence.</p>
+				<p>What we have already created—abilities, knowledge, relationships, or achievements—does not preserve itself. Without continued action, these things gradually fade, like a being that stops running across a wide savannah. In that sense, “death” is not necessarily biological; it is the loss of the capacity to continue creating value.</p>
+				<p>These stories do not celebrate endless rivalry; they remind us of a more fundamental principle: value is formed and maintained only through concrete action, repeated with discipline over time. When the sun rises, what matters is not that we outrun someone else, but that we are alert and intentional enough to step into life through our own actions.</p>
+			</div>
+
+			<!-- 4. Action needs wisdom -->
+			<div class="sub-section">
+				<h3 class="sub-point-1">Action is not enough without wisdom and context</h3>
+
+				<p>Human life is often more complex than it appears. Not everything we believe to be value truly is. As discussed in Understanding the Nature of Value, evaluating value must always be placed within a specific context. And going one step further, that requires an additional and crucial layer: wisdom.</p>
+				<p>Action by itself is not enough to guarantee value. Only when guided by clear and sober wisdom can action create value in its proper sense. People sometimes create things with good intentions, yet cause harm to others or leave negative consequences for the future. Some values exist only momentarily, while others endure across time.</p>
+				<p>Wisdom is what distinguishes short-lived values from lasting ones. It helps us see beyond immediate effects, weigh long-term impacts, and choose more fitting ways to act. If we want to create value responsibly and deeply, we must not only act, but continually refine our knowledge and our capacity for thought.</p>
+			</div>
+
+			<!-- 5. Wisdom + organization create value beyond time -->
+			<div class="sub-section">
+				<h3 class="sub-point-1">When wisdom combines with organization, value can outlast time</h3>
+
+				<p>Human history shows that when action is guided by wisdom, even small things can open great turning points. A falling apple became the starting point for Isaac Newton’s discovery of universal gravitation—not because the event itself was extraordinary, but because the observer was ready to think beyond what appeared.</p>
+				<p>On a larger scale, the ability to combine wisdom with organization allows people to create values that outlive a single lifetime. The Egyptian pyramids are a testament to this. They reflect systemic thinking, engineering, and organization—factors that enabled an ancient society to mobilize resources for decades to build structures that have endured for thousands of years.</p>
+				<p>Similarly, the Panama Canal was not the result of a spontaneous act, but of decades of accumulated knowledge, organization, and long-term decisions. The project not only shortened maritime routes but also changed how the world conducts global trade.</p>
+			</div>
+
+			<!-- 6. Wisdom is still not enough -->
+			<div class="sub-section">
+				<h3 class="sub-point-1">Wisdom must be joined with responsibility</h3>
+
+				<p>However, a question must be asked: do all products of human intellect automatically bring value? For example, hydropower dams provide energy, drive economic development, and improve life for many communities. But at the same time, they can alter ecosystems, displace residents, and leave long-term impacts on the natural environment.</p>
+				<p>These examples show that wisdom, though necessary, is not sufficient to guarantee value. Wisdom must be accompanied by contextual judgment, long-horizon thinking, and responsibility for consequences that extend beyond immediate benefit. It is in this process of discernment that value is defined—not only by what we create, but by how we choose to create it and accept the consequences that follow.</p>
+			</div>
+
+			<!-- 7. Conclusion -->
+			<div class="sub-section">
+				<h3 class="sub-point-1">Combining action, wisdom, and responsibility</h3>
+
+				<p>Creating value does not begin with noble intentions, nor is it guaranteed by passing inspiration. Value appears only when people step into life through concrete action, repeated long enough and steadily enough. But action, if not illuminated by wisdom, can produce results contrary to what we hope.</p>
+				<p>Therefore, action is a necessary beginning, but never the end. Sustainable value is formed when action is tied to understanding, to seeing beyond immediate effects, and to bearing responsibility for what we create. Only in that union does action truly become the path by which people build value and set their lives on a meaningful trajectory.</p>
 			</div>
 		</section>
 	</article>
